--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
   <body id="main" class="dark">
     <div id="question"></div>
     <textarea id="answer" placeholder=""></textarea>
+  </div>
   </body>
 </html>
