Some updates for development Added a README - with tasks.
Signed-off-by: Aaron Eiche <aaron@aaroneiche.com>

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </head>
   <body id="main" class="dark">
     <div id="question"></div>
-    <textarea id="answer" placeholder=""></textarea>
+    <textarea id="answer" contenteditable="true" placeholder=""></textarea>
   </div>
   </body>
 </html>
